--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,11 @@
     android:visibility="visible"
     tools:visibility="visible">
 
-    <Button
-        android:id="@+id/buttonSwitch"
-        android:layout_width="119dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="316dp"
-        android:layout_marginEnd="160dp"
-        android:onClick="onClick"
-        android:text="@string/viewButton"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.452"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+    <FrameLayout
+        android:id="@+id/fragmentContainerActivityMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
