--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:colorPrimary">@color/colorPrimary</item>
     </style>
 
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here -->
+        <!-- Add your customizations -->
+        <item name="android:colorPrimary">@color/colorPrimary</item>
+    </style>
+
 </resources>
