--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_nav_graph"
+app:startDestination="@id/mainFragment">
+
+<fragment
+    android:id="@+id/mainFragment"
+    android:name="com.example.todoapplicationdebut.MainFragment"
+    android:label="Main Fragment"
+    tools:layout="@layout/fragment_main">
+    <action
+        android:id="@+id/action_mainFragment_to_userActivity"
+        app:destination="@id/userActivity" />
+</fragment>
+
+<activity
+    android:id="@+id/userActivity"
+    android:name="com.example.todoapplicationdebut.UserActivity"
+    android:label="User Activity" />
 
 </navigation>
